--- a/index.html
+++ b/index.html
@@ -139,58 +139,58 @@
             <div class="card-body ms-4 ">
               <h3 class=" card-title  text-uppercase fw-bold">Skills</h3>
               <p>
-                Aqui está uma lista de minhas habilidades
+                Aqui está uma lista de minhas competencias mais recentes.
               </p>
               <h5><i class="fas fa-check"></i> Jova/SpringBoot</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
-                <div class="progress-bar" style="width: 70%">70%</div>
+                <div class="progress-bar" style="width: 60%">60%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> JavaScript</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 80%">80%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> TypeScript</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 80%">80%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> Node</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 70%">70%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> Angular</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 50%">50%</div>
               </div>
 
 
               <h5><i class="fas fa-check"></i> Solidity</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 50%">50%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> MongoDB</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 60%">60%</div>
               </div>
 
 
               <h5><i class="fas fa-check"></i> Oracle</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 60%">60%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> CSS</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 90%">90%</div>
+                <div class="progress-bar" style="width: 60%">90%</div>
               </div>
 
               <h5><i class="fas fa-check"></i> Bootstrap</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 100%">100%</div>
+                <div class="progress-bar" style="width: 60%">60%</div>
               </div>
             </div>
           </div>
@@ -202,7 +202,7 @@
       </div>
       <div class="row mt-5 text-center">
         <div class="col-12">
-          <a href="#" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Entrar em contacto</a>
+          <a href="#contact" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Entrar em contacto</a>
           <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a>
         </div>
       </div>
@@ -337,7 +337,7 @@
 
 
   <!-- Formacao -->
-  <section class="formacao py-5 bg-light">
+  <section class="formacao py-5 ">
     <div class="container">
       <div class="text-center mb-5">
         <i class="fas fa-graduation-cap fa-3x pr-3 text-primary"></i>
@@ -348,26 +348,9 @@
       </div>
       <div class="row">
 
-        <!-- Angular 2024 -->
-        <div class="col-md-6 mb-4 h-100">
-          <div class="project shadow-lg rounded-2 p-4 text-center ">
-            <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
-            <h5>
-              Angular - The Complete Guide (2024 Edition)
-              <br>
-              <br>
-              <a href="https://www.udemy.com/course/the-complete-guide-to-angular-2/" target="_blank">Udemy 55.5 hours
-              </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
-                target="_blank">
-                <i class="fas fa-cloud-download-alt "></i>
-              </a>
-            </h5>
-          </div>
-        </div>
 
         <!-- SpringBoot -->
-        <div class="col-md-6 mb-4">
+        <div class="col-md-6 mb-4 ">
           <div class="project shadow-lg rounded-2 p-4 text-center ">
             <img src="images/spring-logo.png" class="img-fluid pb-3" width="100" alt="">
             <h5>
@@ -382,6 +365,25 @@
             </h5>
           </div>
         </div>
+
+        <!-- Angular 2024 -->
+        <div class="col-md-6 mb-4 ">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
+            <h5>
+              Angular - The Complete Guide (2024 Edition)
+
+              <a href="https://www.udemy.com/course/the-complete-guide-to-angular-2/" target="_blank">Udemy 55.5 hours
+              </a>
+              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
+                target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
+
 
         <!-- NodeJS -->
         <div class="col-md-6 mb-4">
@@ -512,7 +514,7 @@
 
         <!-- Kafka  -->
         <div class="col-md-6 mb-4">
-          <div class="project shadow-lg rounded-2 p-4 text-center ">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100 ">
             <img src="images/kafka-logo.png" class="img-fluid pb-3" width="200" alt="">
 
             <h5>
@@ -560,7 +562,7 @@
               JPA/Hibernate
               JSF
 
-              <a href="https://www.globalcode.com.br/home" target="_blank" class="text-muted mt-2 ">2008 GlobalCode</a>
+              <a href="https://www.globalcode.com.br/home" target="_blank">2008 GlobalCode</a>
 
             </h5>
           </div>
@@ -574,7 +576,7 @@
             <h5>
               Java Developer
 
-              <a href="https://www.globalcode.com.br/home" target="_blank" class="text-muted mt-2 ">2007 CBTNuggets</a>
+              <a href="https://www.cbtnuggets.com/" target="_blank">2007 CBTNuggets</a>
 
             </h5>
           </div>
@@ -605,7 +607,7 @@
 
 
   <!-- Styleshout -->
-  <section class="styleshout text-bg-dark bg-gradient p-6 text-center">
+  <!-- <section class="styleshout text-bg-dark bg-gradient p-6 text-center">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -622,48 +624,66 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Services -->
-  <section class="services text-bg-dark py-5 position-relative">
+  <section id="services" class="services text-bg-dark py-5 position-relative">
     <div class="container position-relative">
       <div class="text-center mb-5">
-        <h4 class="text-uppercase fw-bold text-primary">Services</h4>
+        <h4 class="text-uppercase fw-bold text-primary">Projetos</h4>
         <hr class="w-25 mx-auto" />
-        <h2 class="mb-4">What Can I Do For You?</h2>
-        <p class="lead">
+        <h2 class="mb-4">Projetos dos quais participei</h2>
+        <!-- <p class="lead">
           Here are some of the services that I offer when it comes to web
           development and business.
-        </p>
+        </p> -->
       </div>
       <div class="row">
-        <div class="col-md-4 text-center">
-          <i class="fas fa-globe fa-3x text-primary mb-3"></i>
-          <h3 class="fs-3">Web Design</h3>
+        <div class="col-md-3 text-center">
+          <!-- <i class="fas fa-globe fa-3x text-primary mb-3"></i> -->
+          <img src="images/logo7comm.png" alt="" class="img-fluid rounded-circle  mb-3"
+            style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+          <h3 class="fs-3">7comm</h3>
           <hr class="w-25 mx-auto" />
           <p class="fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
-            autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            Tech Leader/Engenheiro</h5>
+          <p>Desenho & Arquitetura de projetos.
+            Estudo de novas tecnologias.
+            Arrumar e/ou melhorar aplicações existentes.
+            Pesquisar, desenhar, implementar e gerenciar aplicações.
+            Reforçar documentação apropriada.
           </p>
         </div>
 
-        <div class="col-md-4 text-center">
-          <i class="fas fa-code fa-3x text-primary mb-3"></i>
-          <h3 class="fs-3">Web Development</h3>
+        <div class="col-md-3 text-center">
+          <!-- <i class="fas fa-code fa-3x text-primary mb-3"></i> -->
+          <img src="images/logotm.png" alt="" class="img-fluid rounded-circle  mb-3"
+            style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+          <h3 class="fs-3">TMInformárica</h3>
           <hr class="w-25 mx-auto" />
+          <h5 class="">Desenvolvedor</h5>
           <p class="fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
-            autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            Construção de API SOUP/Rest & Integração de Sistema LIS usando JAVA
           </p>
         </div>
 
-        <div class="col-md-4 text-center">
-          <i class="fas fa-shopping-cart fa-3x text-primary mb-3"></i>
-          <h3 class="fs-3">Advetising & SEO</h3>
+        <div class="col-md-3 text-center">
+          <img src="images/logocl.png" alt="" class="img-fluid rounded-circle  mb-3"
+            style="border: 2px solid gray; height: 110px; width: 110px;">
+          <h3 class="fs-3">Desenvolvedor</h3>
           <hr class="w-25 mx-auto" />
           <p class="fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
-            autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            Construção de API SOUP/Rest & Integração de Sistema LIS usando JAVA
+          </p>
+        </div>
+
+        <div class="col-md-3 text-center">
+          <img src="images/logodasa.jpeg" alt="" class="img-fluid rounded-circle  mb-3"
+            style="border: 2px solid gray; height: 110px; width: 110px;">
+          <h3 class="fs-3">DASA</h3>
+          <hr class="w-25 mx-auto" />
+          <p class="fs-5">
+            Construção de API Rest & Integração de Sistema para mercador de apoio e diversos outros projetos
           </p>
         </div>
       </div>
@@ -671,7 +691,7 @@
   </section>
 
   <!-- Stats -->
-  <section class="stats py-5 text-bg-secondary">
+  <!-- <section class="stats py-5 text-bg-secondary">
     <div class="container">
       <div class="row g-0">
         <div class="col-md-4 col-lg-2">
@@ -718,14 +738,14 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact -->
-  <section class="contact text-bg-dark bg-gradient py-5">
-    <div class="container">
+  <section id="contact" class="contact text-bg-dark bg-gradient py-5  ">
+    <div class=" container">
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <div class="text-center mb-5">
+          <!-- <div class="text-center mb-5">
             <h4 class="text-uppercase fw-bold text-primary">Contact</h4>
             <hr class="w-25 mx-auto" />
             <h2 class="mb-4">I'd love to hear from you.</h2>
@@ -733,10 +753,10 @@
               If you have any questions or would like to work together, please
               contact me with the form below.
             </p>
-          </div>
+          </div> -->
 
           <!-- Form -->
-          <form name="contact" netlify>
+          <!-- <form name="contact" netlify>
             <div class="mb-5">
               <input type="text"
                 class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
@@ -755,13 +775,13 @@
             <div class="mb-5 d-grid">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
       <!-- Footer -->
       <div class="d-flex mt-5">
         <p class="flex-grow-1">
-          Copyright &copy; 2023 | Design By StyleShout
+          Copyright &copy; 2024 | Design By ErosKoller
         </p>
         <div class="hstack gap-3">
           <a href="#">
