fixing data-lighbox and cetificates

--- a/index.html
+++ b/index.html
@@ -352,7 +352,10 @@
         <!-- SpringBoot -->
         <div class="col-md-6 mb-4 ">
           <div class="project shadow-lg rounded-2 p-4 text-center ">
-            <img src="images/spring-logo.png" class="img-fluid pb-3" width="100" alt="">
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images"
+              data-title="Spring Security 6 , SpringBoot 3 Security, CORs,CSRF,JWT, OAUTH2, OpenID Connect, KeyCloak, Spring Authorization Server">
+              <img src="images/spring-logo.png" class="img-fluid pb-3" width="100" alt="">
+            </a>
             <h5>
               Spring Security 6 , SpringBoot 3 Security, CORs,CSRF,JWT, OAUTH2, OpenID Connect, KeyCloak, Spring
               Authorization Server
@@ -366,10 +369,33 @@
           </div>
         </div>
 
+
+        <!-- SpringBoot -->
+        <div class="col-md-6 mb-4 ">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <a href="certificates/MASTER_JAVA_WEBSERVICES_SPRING_BOOT_UC-G83IZLDD.jpg" data-lightbox="images"
+              data-title="MASTER JAVA WEBSERVICES SPRINGBOOT">
+              <img src="images/spring-logo.png" class="img-fluid pb-3" width="100" alt="">
+            </a>
+            <h5>
+              MASTER JAVA WEBSERVICES SPRINGBOOT
+              <a href="https://www.udemy.com/course/spring-security-zero-to-master" target="_blank">Udemy 9.5 hours
+              </a>
+              <a href="certificates/MASTER_JAVA_WEBSERVICES_SPRING_BOOT_UC-G83IZLDD.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
         <!-- Angular 2024 -->
         <div class="col-md-6 mb-4 ">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images"
+              data-title="Angular - The Complete Guide (2024 Edition)">
+              <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
+            </a>
             <h5>
               Angular - The Complete Guide (2024 Edition)
 
@@ -388,7 +414,10 @@
         <!-- NodeJS -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100 ">
-            <img src="images/node-logo.png" class="img-fluid pb-3" width="100" alt="">
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images"
+              data-title="Master Node JS & Deno.js, build REST APIs with Node.js">
+              <img src="images/node-logo.png" class="img-fluid pb-3" width="100" alt="">
+            </a>
             <h5>
               Master Node JS & Deno.js, build REST APIs with Node.js, GraphQL APIs, add Authentication, use MongoDB, SQL
               & much more!
@@ -405,14 +434,13 @@
         <!-- BootStrap 5 -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/bootstrap-logo2.jpeg" class="img-fluid pb-3" width="130" alt="">
-
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images"
+              data-title="Bootstrap 5 From Scratch | Build 5 Modern Websites">
+              <img src="images/bootstrap-logo2.jpeg" class="img-fluid pb-3" width="130" alt="">
+            </a>
             <h5>
-
               Bootstrap 5 From Scratch | Build 5 Modern Websites
               <br>
-              <br>
-
               <a href="https://www.udemy.com/course/bootstrap-from-scratch/" target="_blank">Udemy 13 hours
               </a>
               <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
@@ -427,8 +455,10 @@
         <!-- MongoDB -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center ">
-            <img src="images/mongodb-icon-2.svg" class="img-fluid pb-3" width="110" alt="">
-
+            <a href="certificates/MONGO_MONGOOSE_UC-NZVJJKM7.jpg" data-lightbox="images"
+              data-title="MongoDB with Java Spring Boot & Spring Framework">
+              <img src="images/mongodb-icon-2.svg" class="img-fluid pb-3" width="110" alt="">
+            </a>
             <h5>
 
               MongoDB with Java Spring Boot & Spring Framework
@@ -436,9 +466,9 @@
               <br>
 
               <a href="https://www.udemy.com/course/mongodb-with-spring-boot-spring-data-mongorepository-mlab-cloudfoundry/"
-                target="_blank">Udemy 4.5 hours
+                target="_blank">Udemy 13.5 hours
               </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
+              <a href="certificates/MONGO_MONGOOSE_UC-NZVJJKM7.pdf" class="btn btn-outline-ligth text-muted"
                 target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -450,17 +480,16 @@
         <!-- Angular -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
-
+            <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.jpg" data-lightbox="images"
+              data-title="Angular 5 Front To Back">
+              <img src="images/angular_icon.webp" class="img-fluid pb-3" width="100" alt="">
+            </a>
             <h5>
 
-              Angular Front To Back
-              Master Angular 5 with Firebase's Firestore as well as
-              authentication
-              <br>
+              Angular 5 <br> Front To Back Master Angular with Firebase's Firestore as well as authentication
 
               <a href="https://www.udemy.com/course/mongodb-with-spring-boot-spring-data-mongorepository-mlab-cloudfoundry/"
-                target="_blank">Udemy 4.5 hours
+                target="_blank">Udemy 11.5 hours
               </a>
               <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
                 target="_blank">
@@ -473,15 +502,16 @@
         <!-- TypeScript -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center ">
-            <img src="images/typescript-logo.png" class="img-fluid pb-3" width="100" alt="">
-
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images" data-title="Understanding TypeScript
+            Boost your JavaScript projects with TypeScript: Learn all about core types, generics, TypeScript + React
+            or Node & more!">
+              <img src="images/typescript-logo.png" class="img-fluid pb-3" width="100" alt="">
+            </a>
             <h5>
-
               Understanding TypeScript
               Boost your JavaScript projects with TypeScript: Learn all about core types, generics, TypeScript + React
               or Node & more!
               <br>
-
               <a href="https://www.udemy.com/course/understanding-typescript/?couponCode=KEEPLEARNING"
                 target="_blank">Udemy 14.5 hours
               </a>
@@ -496,15 +526,17 @@
         <!-- JavaSE 8 -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100 ">
-            <img src="images/java-logo.png" class="img-fluid pb-3" width="130" alt="">
-
+            <a href="certificates/OCA_BOOTCAMP_JAVA_8_PREP_UC-UW0SAT39.jpg" data-lightbox="images"
+              data-title="Complete Java SE 8 Developer Bootcamp - OCA Prep Included">
+              <img src="images/java-logo.png" class="img-fluid pb-3" width="130" alt="">
+            </a>
             <h5>
 
               Complete Java SE 8 Developer Bootcamp - OCA Prep Included
               <a href="https://www.udemy.com/course/learn-java-se-8-and-prepare-for-the-java-associate-exam/?couponCode=KEEPLEARNING"
                 target="_blank">Udemy 11.5 hours
               </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
+              <a href="certificates/OCA_BOOTCAMP_JAVA_8_PREP_UC-UW0SAT39.pdf" class="btn btn-outline-ligth text-muted"
                 target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -512,20 +544,22 @@
           </div>
         </div>
 
-        <!-- Kafka  -->
+        <!-- Kafka    APACHE_KAFKA_SPRINGBOOT.jpg -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100 ">
-            <img src="images/kafka-logo.png" class="img-fluid pb-3" width="200" alt="">
-
+            <a href="certificates/APACHE_KAFKA_SPRINGBOOT.jpg" data-lightbox="images"
+              data-title="APACHE KAFKA SPRINGBOOT">
+              <img src="images/kafka-logo.png" class="img-fluid pb-3" width="200" alt="">
+            </a>
             <h5>
 
               Apache kafka com Spring - Direto ao ponto
               Venha aperfeiçoar seus conhecimentos neste treinamento 20% teoria e 80% prática
 
-              <a href="https://www.udemy.com/course/apache-kafka-com-spring-direto-ao-ponto/?couponCode=KEEPLEARNING"
-                target="_blank">Udemy 11.5 hours
+              <a href="https://www.udemy.com/course/apache-kafka-com-spring-direto-ao-ponto" target="_blank">Udemy 4
+                hours
               </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
+              <a href="certificates/APACHE_KAFKA_SPRINGBOOT.pdf" class="btn btn-outline-ligth text-muted"
                 target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -536,14 +570,17 @@
         <!-- Bootstrap 4  -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/bootstrap-logo.jpeg" class="img-fluid pb-4" width="100" alt="">
+            <a href="certificates/BOOTSTRAP4_UC-PYFN7KOU.jpg" data-lightbox="images"
+              data-title="BootStrap 4 From Scratch">
+              <img src="images/bootstrap-logo.jpeg" class="img-fluid pb-4" width="100" alt="">
+            </a>
             <h5>
               Bootstrap 4 From Scratch With 5 Projects
               Master Bootstrap 4 and build 5 real world themes while learning HTML5 semantics & CSS3
               <a href="https://www.udemy.com/course/bootstrap-4-from-scratch-with-5-projects/?couponCode=KEEPLEARNING"
                 target="_blank">Udemy 11.5 hours
               </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
+              <a href="certificates/BOOTSTRAP4_UC-PYFN7KOU.pdf" class="btn btn-outline-ligth text-muted"
                 target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -554,7 +591,13 @@
         <!-- Java/J2EE GlobalCode  -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/global-code-logo.png" class="img-fluid pb-4" width="150" alt="">
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images" data-title="Academia Java GlobalCode
+            Java
+            J2EE
+            JPA/Hibernate
+            JSF">
+              <img src="images/global-code-logo.png" class="img-fluid pb-4" width="150" alt="">
+            </a>
             <h5>
               Academia Java GlobalCode
               Java
@@ -569,10 +612,12 @@
         </div>
 
 
-        <!-- Java SE  -->
+        <!-- CBTNuggets Java SE  -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/cbt-logo.png" class="img-fluid pb-4" width="150" alt="">
+            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images" data-title="Java Developer">
+              <img src="images/cbt-logo.png" class="img-fluid pb-4" width="150" alt="">
+            </a>
             <h5>
               Java Developer
 
@@ -586,7 +631,10 @@
         <!-- Superior em Análise de Sistemas FASP  -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
-            <img src="images/fasp_logo.png" class="img-fluid pb-4" width="150" alt="">
+            <a href="certificates/Certificado Faculdade_analise_sistemas_2000.jpg" data-lightbox="images"
+              data-title="Complete Java SE 8 Developer Bootcamp - OCA Prep Included">
+              <img src="images/fasp_logo.png" class="img-fluid pb-4" width="150" alt="">
+            </a>
             <h5>
               Superior em Análise de Sistemas FASP
 
