--- a/index.html
+++ b/index.html
@@ -502,7 +502,8 @@
         <!-- TypeScript -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center ">
-            <a href="certificates/no_content_yet_coming_soon.png" data-lightbox="images" data-title="Understanding TypeScript
+            <a href="certificates/Understanding_Typescript_Boost_your_JavaScript_projects_with_TypeScript_Learn.jpg"
+              data-lightbox="images" data-title="Understanding TypeScript
             Boost your JavaScript projects with TypeScript: Learn all about core types, generics, TypeScript + React
             or Node & more!">
               <img src="images/typescript-logo.png" class="img-fluid pb-3" width="100" alt="">
@@ -515,8 +516,8 @@
               <a href="https://www.udemy.com/course/understanding-typescript/?couponCode=KEEPLEARNING"
                 target="_blank">Udemy 14.5 hours
               </a>
-              <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
-                target="_blank">
+              <a href="certificates/Understanding_Typescript_Boost_your_JavaScript_projects_with_TypeScript_Learn.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
             </h5>
