--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
           <div class="card shadow-lg h-100">
             <div class=" card-body">
               <h3 class=" card-title text-uppercase fw-bold">Perfil</h3>
-              <p>
-                Here is some more info about myself to help you get to know me
-                better.
-              </p>
+
+              <p>Aqui estão algumas informações sobre mim para ajudar à compreender-me melhor.</p>
+
               <ul class="list-group list-group-flush">
                 <li class="list-group-item mb-3">
                   <h5 class="text-transform">
