link to deployed cv project

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
             <a href="certificates/Certificado Faculdade_analise_sistemas_2000.jpg" data-lightbox="images"
-              data-title="Complete Java SE 8 Developer Bootcamp - OCA Prep Included">
+              data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
               <img src="images/fasp_logo.png" class="img-fluid pb-4" width="150" alt="">
             </a>
             <h5>
@@ -503,10 +503,8 @@
               <img src="images/kafka-logo.png" class="img-fluid pb-3" width="200" alt="">
             </a>
             <h5>
-
               Apache kafka com Spring - Direto ao ponto
               Venha aperfeiçoar seus conhecimentos neste treinamento 20% teoria e 80% prática
-
               <a href="https://www.udemy.com/course/apache-kafka-com-spring-direto-ao-ponto" target="_blank">Udemy 4
                 hours
               </a>
@@ -568,7 +566,6 @@
             </a>
             <h5>
               Angular - The Complete Guide (2024 Edition)
-
               <a href="https://www.udemy.com/course/the-complete-guide-to-angular-2/" target="_blank">Udemy 55.5 hours
               </a>
               <a href="certificates/ANGULAR4_FRONT_TO_BACK_UC-TUSHOX6B.pdf" class="btn btn-outline-ligth text-muted"
@@ -615,7 +612,6 @@
               J2EE
               JPA/Hibernate
               JSF
-
               <a href="https://www.globalcode.com.br/home" target="_blank">2008 GlobalCode</a>
 
             </h5>
@@ -630,9 +626,7 @@
             </a>
             <h5>
               Java Developer
-
               <a href="https://www.cbtnuggets.com/" target="_blank">2007 CBTNuggets</a>
-
             </h5>
           </div>
         </div>
