--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
   <header class="header vh-100 text-center position-relative">
     <div class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100">
-      <h5 class="text-primary fs-3 fw-bold text-uppercase">Resume</h5>
-      <h1 id="typing-text" class="display-1 fw-bold text-white"></h1>
+      <h2 class="text-primary fw-bold text-uppercase">Resume</h2>
+      <h1 id="typing-text" class="display-1 fw-bold text-white mt-4 "></h1>
 
       <p class="roles text-white text-uppercase fs-4">
-        <span>Full Stack Web Developer | </span>
+        <span>Full Stack Web Developer</span>
         <!-- <span>Online Educator</span> -->
       </p>
 
@@ -38,24 +38,28 @@
       </a>
 
       <div class="social d-flex gap-3 position-absolute">
+        <a href="https://www.linkedin.com/in/eros-koller-5b37ba84/" target="_blank">
+          <i class="fab fa-linkedin fa-3x text-white"></i>
+        </a>
+        <a href="https://gitlab.com/eroskoller" target="_blank">
+          <i class="fab fa-gitlab fa-3x text-white"></i>
+        </a>
+        <!-- <a href="#">
+          <i class="fab fa-github fa-3x text-white"></i>
+        </a>
         <a href="https://x.com/eroskoller" target="_blank">
           <i class="fab fa-twitter fa-3x text-white"></i>
         </a>
         <a href="https://www.instagram.com/eroskoller/" target="_blank">
           <i class="fab fa-instagram fa-3x text-white"></i>
         </a>
-        <a href="https://www.linkedin.com/in/eros-koller-5b37ba84/" target="_blank">
-          <i class="fab fa-linkedin fa-3x text-white"></i>
-        </a>
         <a href="https://www.facebook.com/eros.koller" target="_blank">
           <i class="fab fa-facebook fa-3x text-white"></i>
         </a>
         <a href="#">
           <i class="fab fa-youtube fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-github fa-3x text-white"></i>
-        </a>
+        </a> -->
+
       </div>
     </div>
   </header>
@@ -69,7 +73,7 @@
         <h2 class="mb-4">Deixe-me apresentar</h2>
       </div>
       <div class="about-content d-flex gap-5 align-items-center h-100">
-        <img src="images/IMG_20220205_155324_cutted.jpg" alt="" class="about-img img-fluid rounded-circle" />
+        <img src="images/eros_.jpg" alt="" class="about-img img-fluid rounded-circle" />
         <p class="lead">
           Inovativo e com um mix único de tecnologias e conhecimento profundo das mesmas.
 
@@ -113,14 +117,15 @@
                   <h5 class="text-transform">
                     <i class="fas fa-building text-primary"></i> Última posição:
                   </h5>
-                  <p>Tech Leader/Engenheiro</p>
+                  <p>Tech Leader/Engenheiro
+                  </p>
                 </li>
-                <!-- <li class="list-group-item mb-3">
-        <h5 class="text-transform">
-          <i class="fas fa-home text-primary"></i> Website:
-        </h5>
-        <p>traversymedia.com</p>
-      </li> -->
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-home text-primary"></i> Cel:
+                  </h5>
+                  <p>(11) 96286-1010</p>
+                </li>
                 <li class="list-group-item mb-3">
                   <h5 class="text-transform">
                     <i class="fas fa-envelope text-primary"></i> Email:
@@ -202,8 +207,8 @@
       </div>
       <div class="row mt-5 text-center">
         <div class="col-12">
-          <a href="#contact" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Entrar em contacto</a>
-          <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a>
+          <!-- <a href="#contact" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Entrar em contacto</a>
+          <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a> -->
         </div>
       </div>
     </div>
@@ -358,8 +363,30 @@
             <h5>
               Superior em Análise de Sistemas FASP
 
-              <a href="http://fasp.br/" target="_blank" class="text-muted mt-2 ">FASP - 1995-2000</a>
+              <a href="http://fasp.br/" target="_blank" class="text-primary mt-2 ">FASP - 1995-2000</a>
               <a href="certificates/Certificado Faculdade_analise_sistemas_2000.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
+        <!-- Spring Security 6  -->
+        <div class="col-md-6 mb-4">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <a href="certificates/Spring_Security_6_SpringBoot_3_Security_CORs_CSRF_JWT_OAUTH2_OpenID_Connect_KeyCloak_Spring_AuthorizationServer.jpg"
+              data-lightbox="images" data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
+              <img src="images/spring-logo.png" class="img-fluid pb-4" width="150" alt="">
+            </a>
+            <h5>
+
+              'Spring Security Zero to Master' ORs, CSRF, JWT, OAUTH2,
+              password management, method level security, user, roles & authorities management inside web applications.
+
+              <a href="https://www.udemy.com/course/spring-security-zero-to-master/learn/lecture/23729040#overview"
+                target="_blank" class="text-primary mt-2 ">SpringSecurity6</a>
+              <a href="certificates/Spring_Security_6_SpringBoot_3_Security_CORs_CSRF_JWT_OAUTH2_OpenID_Connect_KeyCloak_Spring_AuthorizationServer.pdf"
                 class="btn btn-outline-ligth text-muted" target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -660,9 +687,9 @@
   <section id="services" class="services text-bg-dark py-5 position-relative">
     <div class="container position-relative">
       <div class="text-center mb-5">
-        <h4 class="text-uppercase fw-bold text-primary">Projetos</h4>
+        <h4 class="text-uppercase fw-bold text-primary">Histórico</h4>
         <hr class="w-25 mx-auto" />
-        <h2 class="mb-4">Projetos dos quais participei</h2>
+        <h2 class="mb-4">Empresas das quais fiz parte</h2>
         <!-- <p class="lead">
           Here are some of the services that I offer when it comes to web
           development and business.
@@ -671,13 +698,17 @@
       <div class="row">
         <div class="col-md-3 text-center">
           <!-- <i class="fas fa-globe fa-3x text-primary mb-3"></i> -->
-          <img src="images/logo7comm.png" alt="" class="img-fluid rounded-circle  mb-3"
-            style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+          <a href="https://www.7comm.com.br/" target="_blank">
+            <img src="images/logo7comm.png" alt="" class="img-fluid rounded-circle  mb-3"
+              style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+          </a>
+
           <h3 class="fs-3">7comm</h3>
           <hr class="w-25 mx-auto" />
-          <p class="fs-5">
-            Tech Leader/Engenheiro</h5>
-          <p>Desenho & Arquitetura de projetos.
+          <span class="fw-bold  fst-italic text-primary">Nov. 2021 – Apr. 2024</span>
+          <h5>Tech Leader/Engenheiro</h5>
+          <p class="fs-8">
+            Desenho & Arquitetura de projetos.
             Estudo de novas tecnologias.
             Arrumar e/ou melhorar aplicações existentes.
             Pesquisar, desenhar, implementar e gerenciar aplicações.
@@ -687,35 +718,56 @@
 
         <div class="col-md-3 text-center">
           <!-- <i class="fas fa-code fa-3x text-primary mb-3"></i> -->
-          <img src="images/logotm.png" alt="" class="img-fluid rounded-circle  mb-3"
-            style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+
+          <a href="https://tminformatica.com.br/" target="_blank">
+            <img src="images/logotm.png" alt="" class="img-fluid rounded-circle  mb-3"
+              style="border: 2px solid gray; height: 110px; width: 110px; background: #fff;">
+          </a>
+
           <h3 class="fs-3">TMInformárica</h3>
           <hr class="w-25 mx-auto" />
-          <h5 class="">Desenvolvedor</h5>
-          <p class="fs-5">
+          <span class="fw-bold  fst-italic text-primary">Nov. 2019 – Out. 2021</span>
+          <h5>FullStack developer Java/Node/Angular</h5>
+          <p class="fs-8">
             Construção de API SOUP/Rest & Integração de Sistema LIS usando JAVA
+            FrontEnt Angular
           </p>
         </div>
 
         <div class="col-md-3 text-center">
-          <img src="images/logocl.png" alt="" class="img-fluid rounded-circle  mb-3"
-            style="border: 2px solid gray; height: 110px; width: 110px;">
-          <h3 class="fs-3">Desenvolvedor</h3>
-          <hr class="w-25 mx-auto" />
-          <p class="fs-5">
-            Construção de API SOUP/Rest & Integração de Sistema LIS usando JAVA
-          </p>
-        </div>
 
-        <div class="col-md-3 text-center">
-          <img src="images/logodasa.jpeg" alt="" class="img-fluid rounded-circle  mb-3"
-            style="border: 2px solid gray; height: 110px; width: 110px;">
+          <a href="https://dasa.com.br/" target="_blank">
+            <img src="images/logodasa.jpeg" alt="" class="img-fluid rounded-circle  mb-3"
+              style="border: 2px solid gray; height: 110px; width: 110px;">
+          </a>
+
           <h3 class="fs-3">DASA</h3>
           <hr class="w-25 mx-auto" />
+          <span class="fw-bold  fst-italic text-primary">Apr. 2010 – Nov. 2015</span>
+          <h5>Java Dev</h5>
           <p class="fs-5">
             Construção de API Rest & Integração de Sistema para mercador de apoio e diversos outros projetos
           </p>
         </div>
+
+        <div class="col-md-3 text-center">
+          <a href="https://cientificalab.com.br/" target="_blank">
+
+            <img src="images/logocl.png" alt="" class="img-fluid rounded-circle  mb-3"
+              style="border: 2px solid gray; height: 110px; width: 110px;">
+          </a>
+
+          <h3 class="fs-3">CientificaLab</h3>
+          <hr class="w-25 mx-auto" />
+          <span class="fw-bold  fst-italic text-primary">Feb. 2009 – Apr. 2010</span>
+          <h5>Java Dev</h5>
+          <p class="fs-5">
+            Construção de API SOUP/Rest & Integração de Sistema LIS <span class="fw-bold text-primary"> B2B</span>
+            JAVA
+          </p>
+        </div>
+
+
       </div>
     </div>
   </section>
@@ -814,7 +866,7 @@
           Copyright &copy; 2024 | Design By ErosKoller
         </p>
         <div class="hstack gap-3">
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-facebook fa-2x text-white"></i>
           </a>
           <a class="text-decoration-none" href="#">
@@ -828,7 +880,30 @@
           </a>
           <a class="text-decoration-none" href="#">
             <i class="fab fa-dribbble fa-2x text-white"></i>
+          </a> -->
+
+          <a href="https://www.linkedin.com/in/eros-koller-5b37ba84/" target="_blank">
+            <i class="fab fa-linkedin fa-3x text-white"></i>
           </a>
+          <a href="https://gitlab.com/eroskoller" target="_blank">
+            <i class="fab fa-gitlab fa-3x text-white"></i>
+          </a>
+          <!-- <a href="#">
+            <i class="fab fa-github fa-3x text-white"></i>
+          </a>
+          <a href="https://x.com/eroskoller" target="_blank">
+            <i class="fab fa-twitter fa-3x text-white"></i>
+          </a>
+          <a href="https://www.instagram.com/eroskoller/" target="_blank">
+            <i class="fab fa-instagram fa-3x text-white"></i>
+          </a>
+          <a href="https://www.facebook.com/eros.koller" target="_blank">
+            <i class="fab fa-facebook fa-3x text-white"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-youtube fa-3x text-white"></i>
+          </a> -->
+
         </div>
       </div>
     </div>
