--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
               <p>
                 Aqui está uma lista de minhas competencias mais recentes.
               </p>
-              <h5><i class="fas fa-check"></i> Jova/SpringBoot</h5>
+              <h5><i class="fas fa-check"></i> Java/SpringBoot</h5>
+              <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
+                <div class="progress-bar" style="width: 60%">60%</div>
+              </div>
+
+              <h5><i class="fas fa-check"></i> SpringSecurity</h5>
               <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
                 <div class="progress-bar" style="width: 60%">60%</div>
               </div>
