--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
       <!-- Footer -->
       <div class="d-flex mt-5">
         <p class="flex-grow-1">
-          Copyright &copy; 2024 | Design By ErosKoller
+          Design By ErosKoller | &copy; 2024
         </p>
         <div class="hstack gap-3">
           <!-- <a href="#">
