--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </li>
                 <li class="list-group-item mb-3">
                   <h5 class="text-transform">
-                    <i class="fas fa-home text-primary"></i> Cel:
+                    <i class="fas fa-phone text-primary"></i> Cel:
                   </h5>
                   <p>(11) 96286-1010</p>
                 </li>
@@ -138,70 +138,72 @@
 
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ">
 
-          <div class="card  bg-light shadow-lg ">
+          <div class="card h-100 shadow-lg ">
             <div class="card-body ms-4 ">
               <h3 class=" card-title  text-uppercase fw-bold">Skills</h3>
               <p>
-                Aqui está uma lista de minhas competencias mais recentes.
+                Aqui está uma lista resumida de algumas das minhas competencias.
               </p>
               <h5><i class="fas fa-check"></i> Java/SpringBoot</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
                 <div class="progress-bar" style="width: 60%">60%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> SpringSecurity</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
                 <div class="progress-bar" style="width: 60%">60%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> JavaScript</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 80%">80%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> TypeScript</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 80%">80%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> Node</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 70%">70%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> Angular</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 50%">50%</div>
-              </div>
+              </div> -->
 
 
               <h5><i class="fas fa-check"></i> Solidity</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 50%">50%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> MongoDB</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
-              </div>
+              </div> -->
 
 
               <h5><i class="fas fa-check"></i> Oracle</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> CSS</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">90%</div>
-              </div>
+              </div> -->
 
               <h5><i class="fas fa-check"></i> Bootstrap</h5>
-              <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
-              </div>
+              </div> -->
+
+              <h5><i class="fas fa-check"></i> Inglês Fluente</h5>
             </div>
           </div>
 
@@ -849,7 +851,7 @@
       <!-- Footer -->
       <div class="d-flex mt-5">
         <p class="flex-grow-1">
-          Design By ErosKoller | &copy; 2024
+          ErosKoller | &copy; 2024
         </p>
         <div class="hstack gap-3">
           <!-- <a href="#">
