--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </div> -->
 
 
-              <h5><i class="fas fa-check"></i> Oracle</h5>
+              <h5><i class="fas fa-check"></i> SQL/Oracle</h5>
               <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
               </div> -->
@@ -202,7 +202,6 @@
               <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
               </div> -->
-
               <h5><i class="fas fa-check"></i> Inglês Fluente</h5>
             </div>
           </div>
