--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
                   <h5 class="text-transform">
                     <i class="fas fa-building text-primary"></i> Última posição:
                   </h5>
-                  <p>Tech Leader/Engenheiro
+                  <p>Tech Leader - Engenheiro |
+                    <span class="fst-italic">7comm/Bradesco</span>
                   </p>
                 </li>
-                <li class="list-group-item mb-3">
+                <li class=" list-group-item mb-3">
                   <h5 class="text-transform">
                     <i class="fas fa-phone text-primary"></i> Cel:
                   </h5>
