--- a/index.html
+++ b/index.html
@@ -107,12 +107,7 @@
                   </h5>
                   <p>Eros Glauco Koller</p>
                 </li>
-                <!-- <li class="list-group-item mb-3">
-        <h5 class="text-transform">
-          <i class="fas fa-calendar text-primary"></i> Birth Date:
-        </h5>
-        <p>August 10, 1981</p>
-      </li> -->
+
                 <li class="list-group-item mb-3">
                   <h5 class="text-transform">
                     <i class="fas fa-building text-primary"></i> Última posição:
@@ -647,29 +642,7 @@
     </div>
   </section>
 
-
-
-  <!-- Styleshout -->
-  <!-- <section class="styleshout text-bg-dark bg-gradient p-6 text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1>Shoutout to StyleShout</h1>
-          <hr class="w-25 mx-auto" />
-          <p class="lead mb-5">
-            Styleshout is a place for Free HTML5 Templates and Free Wordpress.
-            This design was inspired by one of their templates. Check them out
-            for templates to use and get inspiration from.
-          </p>
-          <a href="https://styleshout.com" target="_blank" class="btn btn-primary btn-lg text-uppercase px-5 mx-3 my-2">
-            Visit StyleShout
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- Services -->
+  <!-- Empresas/Trabalhos/Participacoes -->
   <section id="services" class="services text-bg-dark py-5 position-relative">
     <div class="container position-relative">
       <div class="text-center mb-5">
@@ -677,8 +650,7 @@
         <hr class="w-25 mx-auto" />
         <h2 class="mb-4">Empresas das quais fiz parte</h2>
         <!-- <p class="lead">
-          Here are some of the services that I offer when it comes to web
-          development and business.
+          Aqui esta a lista de empresas das quais fiz parte.
         </p> -->
       </div>
       <div class="row">
@@ -758,92 +730,13 @@
     </div>
   </section>
 
-  <!-- Stats -->
-  <!-- <section class="stats py-5 text-bg-secondary">
-    <div class="container">
-      <div class="row g-0">
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-users fa-3x mb-3"></i>
-            <p class="fs-1">500+</p>
-            <h3 class="fs-6 text-uppercase">Clients</h3>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-project-diagram fa-3x mb-3"></i>
-            <p class="fs-1">700+</p>
-            <h3 class="fs-6 text-uppercase">Projects</h3>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-clock fa-3x mb-3"></i>
-            <p class="fs-1">16+</p>
-            <h3 class="fs-6 text-uppercase">Years</h3>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-book fa-3x mb-3"></i>
-            <p class="fs-1">25</p>
-            <h3 class="fs-6 text-uppercase">Publications</h3>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-youtube fa-3x mb-3"></i>
-            <p class="fs-1">2.06M</p>
-            <h3 class="fs-6 text-uppercase">Subscribers</h3>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="stat text-center border-end border-dark">
-            <i class="fas fa-graduation-cap fa-3x mb-3"></i>
-            <p class="fs-1">1M+</p>
-            <h3 class="fs-6 text-uppercase">Students</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- Contact -->
   <section id="contact" class="contact text-bg-dark bg-gradient py-5  ">
     <div class=" container">
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <!-- <div class="text-center mb-5">
-            <h4 class="text-uppercase fw-bold text-primary">Contact</h4>
-            <hr class="w-25 mx-auto" />
-            <h2 class="mb-4">I'd love to hear from you.</h2>
-            <p class="lead">
-              If you have any questions or would like to work together, please
-              contact me with the form below.
-            </p>
-          </div> -->
 
-          <!-- Form -->
-          <!-- <form name="contact" netlify>
-            <div class="mb-5">
-              <input type="text"
-                class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
-                name="name" placeholder="Name" />
-            </div>
-            <div class="mb-5">
-              <input type="email"
-                class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
-                name="email" placeholder="Email" />
-            </div>
-            <div class="mb-5">
-              <textarea
-                class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
-                name="message" placeholder="Message"></textarea>
-            </div>
-            <div class="mb-5 d-grid">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form> -->
         </div>
       </div>
       <!-- Footer -->
