--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
               </div> -->
 
               <h5><i class="fas fa-check"></i> Bootstrap</h5>
+              <h5><i class="fas fa-check"></i> Cloud/Azure Architect</h5>
               <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 60%">60%</div>
               </div> -->
@@ -367,6 +368,28 @@
 
               <a href="http://fasp.br/" target="_blank" class="text-primary mt-2 ">FASP - 1995-2000</a>
               <a href="certificates/Certificado Faculdade_analise_sistemas_2000.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
+
+        <!-- Azure Architecture  -->
+        <div class="col-md-6 mb-4">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <a href="certificates/Udemy_ Microsoft_Azure_From_Zero_to_Hero-The_Complete_Guide_on_12_18_2024.jpg"
+              data-lightbox="images" data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
+              <img src="images/azure.jpeg" class="img-fluid pb-4" width="100" alt="">
+            </a>
+            <h5>
+              Microsoft Azure: From Zero to Hero - The Complete Guide
+
+
+              <a href="https://www.udemy.com/course/microsoft-azure-from-zero-to-hero-the-complete-guide/"
+                target="_blank" class="text-primary mt-2 ">Azure Architecture 21 hours</a>
+              <a href="certificates/Udemy_ Microsoft_Azure_From_Zero_to_Hero-The_Complete_Guide_on_12_18_2024.pdf"
                 class="btn btn-outline-ligth text-muted" target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
