--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
   <section id="services" class="services text-bg-dark py-5 position-relative">
     <div class="container position-relative">
       <div class="text-center mb-5">
-        <h4 class="text-uppercase fw-bold text-primary">Histórico</h4>
+        <h4 class="text-uppercase fw-bold text-primary">Históricos</h4>
         <hr class="w-25 mx-auto" />
         <h2 class="mb-4">Empresas das quais fiz parte</h2>
         <!-- <p class="lead">
@@ -687,7 +687,7 @@
           <h3 class="fs-3">7comm</h3>
           <hr class="w-25 mx-auto" />
           <span class="fw-bold  fst-italic text-primary">Nov. 2021 – Apr. 2024</span>
-          <h5>Tech Leader/Engenheiro</h5>
+          <h5>Engenheiro/Tech Leader/FullStack</h5>
           <p class="fs-8">
             Desenho & Arquitetura de projetos.
             Estudo de novas tecnologias.
