Spring Zero to Hero

--- a/index.html
+++ b/index.html
@@ -400,6 +400,28 @@
         <!-- Spring Security 6  -->
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <a href="certificates/Udemy_Master_Java_framework_Spring-6_AOP_Spring-MVC,_Spring-Boot-3_Thymeleaf_Spring-Security-6_Spring-JDBC_JPA_REST.jpg"
+              data-lightbox="images" data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
+              <img src="images/spring-logo.png" class="img-fluid pb-4" width="100" alt="">
+            </a>
+            <h5>
+
+              'Master Java framework Spring 6, AOP, Spring MVC, Spring Boot 3, Thymeleaf, Spring Security 6, Spring
+              JDBC, JPA,REST.
+
+              <a href="https://www.udemy.com/course/spring-springboot-jpa-hibernate-zero-to-master" target="_blank"
+                class="text-primary mt-2 ">Spring6 AOP JPA REST - 36.5 hours</a>
+              <a href="certificates/Udemy_Master_Java_framework_Spring-6_AOP_Spring-MVC,_Spring-Boot-3_Thymeleaf_Spring-Security-6_Spring-JDBC_JPA_REST.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
+        <!-- Spring Security 6  -->
+        <div class="col-md-6 mb-4">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
             <a href="certificates/Spring_Security_6_SpringBoot_3_Security_CORs_CSRF_JWT_OAUTH2_OpenID_Connect_KeyCloak_Spring_AuthorizationServer.jpg"
               data-lightbox="images" data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
               <img src="images/spring-logo.png" class="img-fluid pb-4" width="100" alt="">
