Adding GitHub Actions certification

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         <a href="https://gitlab.com/eroskoller" target="_blank">
           <i class="fab fa-gitlab fa-3x text-white"></i>
         </a>
-        <!-- <a href="#">
+        <a href="https://github.com/ErosKollerDev" target="_blank">
           <i class="fab fa-github fa-3x text-white"></i>
         </a>
+        <!--
         <a href="https://x.com/eroskoller" target="_blank">
           <i class="fab fa-twitter fa-3x text-white"></i>
         </a>
@@ -151,6 +152,8 @@
               <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="70">
                 <div class="progress-bar" style="width: 60%">60%</div>
               </div> -->
+
+              <h5><i class="fas fa-check"></i> CI/CD GitHub Actions</h5>
 
               <h5><i class="fas fa-check"></i> JavaScript</h5>
               <!-- <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
@@ -380,7 +383,7 @@
         <div class="col-md-6 mb-4">
           <div class="project shadow-lg rounded-2 p-4 text-center h-100">
             <a href="certificates/Udemy_ Microsoft_Azure_From_Zero_to_Hero-The_Complete_Guide_on_12_18_2024.jpg"
-              data-lightbox="images" data-title="Ciências Contábeis com Ênfase em Análise de Sistemas">
+              data-lightbox="images" data-title="Microsoft Azure: From Zero to Hero - The Complete Guide">
               <img src="images/azure.jpeg" class="img-fluid pb-4" width="100" alt="">
             </a>
             <h5>
@@ -390,6 +393,27 @@
               <a href="https://www.udemy.com/course/microsoft-azure-from-zero-to-hero-the-complete-guide/"
                 target="_blank" class="text-primary mt-2 ">Azure Architecture 21 hours</a>
               <a href="certificates/Udemy_ Microsoft_Azure_From_Zero_to_Hero-The_Complete_Guide_on_12_18_2024.pdf"
+                class="btn btn-outline-ligth text-muted" target="_blank">
+                <i class="fas fa-cloud-download-alt "></i>
+              </a>
+            </h5>
+          </div>
+        </div>
+
+
+        <!-- GitHub Actions  -->
+        <div class="col-md-6 mb-4">
+          <div class="project shadow-lg rounded-2 p-4 text-center h-100">
+            <a href="certificates/Udemy_GitActions_CI _CD_workflows_with_GitHubs_DevOps.jpg" data-lightbox="images"
+              data-title="GitHub Actions CI / CD DevOps">
+              <img src="https://icon.icepanel.io/Technology/svg/GitHub-Actions.svg" class="img-fluid pb-4" width="100"
+                alt="">
+            </a>
+            <h5>
+              GitHub Actions CI / CD DevOps
+              <a href="https://www.udemy.com/course/github-actions-the-complete-guide" target="_blank"
+                class="text-primary mt-2 ">CI / CD DevOps 10.5 hours</a>
+              <a href="certificates/Udemy_GitActions_CI _CD_workflows_with_GitHubs_DevOps.pdf"
                 class="btn btn-outline-ligth text-muted" target="_blank">
                 <i class="fas fa-cloud-download-alt "></i>
               </a>
@@ -812,9 +836,10 @@
           <a href="https://gitlab.com/eroskoller" target="_blank">
             <i class="fab fa-gitlab fa-3x text-white"></i>
           </a>
-          <!-- <a href="#">
+          <a href="https://github.com/ErosKollerDev" target="_blank">
             <i class="fab fa-github fa-3x text-white"></i>
           </a>
+          <!--
           <a href="https://x.com/eroskoller" target="_blank">
             <i class="fab fa-twitter fa-3x text-white"></i>
           </a>
